Testing how to commit with vsc

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h3>Jode Sparks Practice Page</h3>
     <p id="first">If you highlighted this, then are you are reading the first paragraph. </p>
     <p id="second">This is the second paragraph. The first paragraph is transparent (press ⌘A to view).</p>
-    <p id="third">This is the rainbow paragraph, it needs to be long because I don't know how to shorten the rainbow effect. It fits to browser window, so if you pull the edge of your window you'll see it adjusting</p>
+    <p id="third">This is the rainbow paragraph. It needs to be long because I don't know how to shorten the rainbow effect. It fits to browser window, so if you pull the edge of your window you'll see it adjusting</p>
 
 </body>
 </html>
