Testing commit still

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <p id="first">If you highlighted this, then are you are reading the first paragraph. </p>
     <p id="second">This is the second paragraph. The first paragraph is transparent (press ⌘A to view).</p>
     <p id="third">This is the rainbow paragraph. It needs to be long because I don't know how to shorten the rainbow effect. It fits to browser window, so if you pull the edge of your window you'll see it adjusting</p>
-
+    <p id="fourth">Here lies a final paragraph, with which I am testing how to use github</p>
 </body>
 </html>
