--- a/Tanukis.html
+++ b/Tanukis.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--Task 6-->
     <link href="/css/styles.css" rel="stylesheet">   
+  </head>
 
 <!--Task 2-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -24,9 +25,9 @@
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Tanukis.html">Tanukis</a>
+          <a class="nav-link" href="#">Tanukis</a>
           <li class="nav-item">
-            <a class="nav-link" href="funjs.html">FunJS</a>
+            <a class="nav-link" href="#">FunJS</a>
           
          <!--DROPDOWN
         </li>
@@ -57,21 +58,30 @@
 </nav>
   
 <!--Task 3-->
-<div class="container">
-  <title>Home</title>
-  </head>
-  <body>
-    <h1 class="pt-5">Hello, world!</h1>
-    <h3>Welcome to my assignment 2 page</h3>
-    <div>
-            </div>
+
+  <title>Tanukis</title>
+
+<div class="container-lg">
+  <img src="/images/tanukis at supreme court.png" class="img-fluid">
+  <img src="/images/tanukis at supreme court.png" class="img-fluid">
+  <img src="/images/tanukis at supreme court.png" class="img-fluid">
+  <img src="/images/tanukis at supreme court.png" class="img-fluid">
+  <img src="/images/tanukis at supreme court.png" class="img-fluid">
+  </div>
+  
+  <div class="container-sm">
+    <div class="row">
+      <div class="col-sm">
+        <img src="/images/tanukis at supreme court.png" class="img-fluid">
+      </div>
+      <div class="col-sm">
+        <img src="/images/tanukis at supreme court.png" class="img-fluid">
+      </div>
+      <div class="col-sm">
+        <img src="/images/tanukis at supreme court.png" class="img-fluid">
+      </div>
     </div>
   </div>
-
-
-<!--Task 11-->
-<!--Task 12 through 15-->
-<img src="/images/tanukis at supreme court.png" class="img-fluid">
   
     <!-- Optional JavaScript; choose one of the two! -->
 
