--- a/funjs.html
+++ b/funjs.html
@@ -24,11 +24,10 @@
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Tanukis.html">Tanukis</a>
+          <a class="nav-link" href="#">Tanukis</a>
           <li class="nav-item">
-            <a class="nav-link" href="funjs.html">FunJS</a>
-          
-         <!--DROPDOWN
+            <a class="nav-link" href="#">FunJS</a>
+ <!--DROPDOWN
         </li>
           <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
@@ -47,41 +46,23 @@
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
       -->
-      </ul>
-      <form class="d-flex">
-        <input class="form-control mr-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-light" type="submit">Search</button>
-      </form>
-    </div>
+    </ul>
+    <form class="d-flex">
+      <input class="form-control mr-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-light" type="submit">Search</button>
+    </form>
   </div>
+</div>
 </nav>
-  
-<!--Task 3-->
-<div class="container">
-  <title>Home</title>
-  </head>
-  <body>
-    <h1 class="pt-5">Hello, world!</h1>
-    <h3>Welcome to my assignment 2 page</h3>
-    <div>
-            </div>
+
+<div class="container-sm">
+    <title>Words</title>
+    </head>
+    <body>
+      <h1>There would be some</h1>
+      <h3>JavaScript here if I had watched those videos yet</h3>
+      <div>
+              </div>
+      </div>
     </div>
-  </div>
-
-
-<!--Task 11-->
-<!--Task 12 through 15-->
-<img src="/images/tanukis at supreme court.png" class="img-fluid">
   
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
