fixed borken links

--- a/funjs.html
+++ b/funjs.html
@@ -24,9 +24,9 @@
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Tanukis</a>
+          <a class="nav-link" href="Tanukis.html">Tanukis</a>
           <li class="nav-item">
-            <a class="nav-link" href="#">FunJS</a>
+            <a class="nav-link" href="funjs.html">FunJS</a>
  <!--DROPDOWN
         </li>
           <li class="nav-item dropdown">
