--- a/Tanukis.html
+++ b/Tanukis.html
@@ -25,9 +25,9 @@
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Tanukis</a>
+          <a class="nav-link" href="Tanukis.htmls">Tanukis</a>
           <li class="nav-item">
-            <a class="nav-link" href="#">FunJS</a>
+            <a class="nav-link" href="funjs.html">FunJS</a>
           
          <!--DROPDOWN
         </li>
