stuff before final project

--- a/background.html
+++ b/background.html
@@ -12,6 +12,19 @@
 }
 
     </style>
+
+<!--Navigation bar-->
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<div id="nav-placeholder">
+
+</div>
+<script>
+$(function(){
+  $("#nav-placeholder").load("nav.html");
+});
+</script>
+<!--end of Navigation bar-->
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
