--- a/index.html
+++ b/index.html
@@ -37,20 +37,21 @@ $(function(){
 
 <!--Begin YouTube Video-->
 
-<h1 class="mt-5 text-center">Vitelloni Draft 1</h1>
+<h1 class="mt-5 text-center"><a class="link" href="videos.html">Videos</a></h1>
+
 <div class="embed-responsive embed-responsive-16by9 text-center">
   <iframe class='embed-responsive-item' src="https://www.youtube.com/embed/VfB2z5Lzc6Q" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <!--Begin Image-->
 <div class="text-center">
-  <h1 class="mt-5">Stars in the sky</h1>
+  <h1 class="mt-5"><a class="link" href="stars.html">Stars</a></h1>
   <img src="images/stars/IMG_5725.JPG" class="img-fluid" alt="">
 </div>
 
 <!--Begin P5.js sample-->
 <div class="mt-5 text-center">
-<h1>An Interactive Animation Made With Processing5</h1>
+  <h1 class="mt-5"><a class="link" href="background.html">P5.js</a></h1>
 <div class="embed-responsive embed-responsive-16by9 text-center">
   <iframe class='embed-responsive-item' src="background.html"></iframe>
 </div>
