--- a/nav.html
+++ b/nav.html
@@ -21,6 +21,9 @@
     <!-- My SASS -->
     <link rel="stylesheet" href="scss/custom.css"></link>
 
+    <!--My CSS-->
+    <link href="/css/styles.css" rel="stylesheet">
+
     <title>Nav</title>
   </head>
 
@@ -43,6 +46,12 @@
                 <a class="nav-link" href="map.html">Map</a>
                 <li class="nav-item">
                   <a class="nav-link" href="background.html">P5.js</a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="videos.html">Videos</a>
+                    <li class="nav-item">
+                      <a class="nav-link" href="Stars.html">Stars</a>
+                      <li class="nav-item">
+                        <a class="nav-link" href="final_project.html">FinalProject</a>
 
                 
       </ul>
