--- a/videos.html
+++ b/videos.html
@@ -32,7 +32,7 @@ $(function(){
   <iframe class='embed-responsive-item' src="https://www.youtube.com/embed/XRrGeOtYPlI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
-<h1 class="mt-5 text-center">MYTH</h1>
+<h1 class="mt-5 text-center">Bodies Lie</h1>
 <div class="embed-responsive embed-responsive-16by9 text-center">
   <iframe class='embed-responsive-item' src="https://player.vimeo.com/video/714147046?" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
